--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-syntax-highlighter)"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
